dhall/tests/type-errors/unit/UnionDeprecatedConstructorsKeyword.txt
Type error:  --> 1:1
  |
1 | constructors < Left : Natural | Right : Bool >âŠ
  | ^----------^
  |
  = Unbound variable
